--- a/src/layout/index.html
+++ b/src/layout/index.html
@@ -218,7 +218,14 @@
   </div>
 </div>
 <div class="footer noprint">
+  <div class="footer-logo text-center">
     <div class="row">
+      <div class="columns large-12">
+        <img src="/static/img/robertkitesafari-logo-detail2.gif" border="0">
+      </div>
+    </div>
+  </div>
+  <div class="row">
     <div class="medium-4 large-4 columns">
       <h3 id="contact">Contact</h3>
       <strong>Robert Kamerbeek</strong>
@@ -237,9 +244,12 @@
       <h3>Overig</h3>
       <ul class="footer-links">
          <li class="fi-link color-blue"> <a href="/#home?scrollTo=about-us">About us</a></li>
-         <!-- <li class="fi-link color-blue"> <a href="http://www.seabreeze.com.au/graphs/wa3.asp">Seabreeze (weer & wind)</a></li> -->
-         <li class="fi-link color-blue"> <a href="/static/docs/General-terms-and-conditions.pdf"  target="_blank" rel="no-follow">Terms and conditions (pdf)</a></li>
-         <li class="fi-link color-blue"> <a href="/static/docs/Form-and-participation-agreement.pdf"  target="_blank" rel="no-follow">Participation agreement (pdf)</a></li>
+         <li class="fi-link color-blue"> <a href="/static/docs/General-terms-and-conditions.pdf"
+            target="_blank" rel="no-follow">Terms and conditions (pdf)</a></li>
+         <li class="fi-link color-blue"> <a href="/static/docs/Form-and-participation-agreement.pdf"
+            target="_blank" rel="no-follow">Participation agreement (pdf)</a></li>
+         <li class="fi-link color-blue"> <a href="/static/docs/Kite-level-agreement.pdf"
+            target="_blank" rel="no-follow">Kite-level agreement (pdf)</a></li>
        </ul>
      </div>
   </div>
