--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,7 @@
 $main-color1: #3D2708; // Default Dark bruin  - top-bar
 $main-color2: #79B842; // Default Green       - row-caption, footer
 $topbar-sticky-class: ".sticky" default;
+$footer-logo: #ffbf00; // Yellow background
 
 html, body, .off-canvas-wrap, .inner-wrap, .main-section
 {
@@ -13,8 +14,8 @@ html, body, .off-canvas-wrap, .inner-wrap, .main-section
 }
 
 .wrapper{min-height:100%}
-.main{overflow:auto;padding-bottom:215px}
-.footer{margin-top:-215px}
+.main{overflow:auto;padding-bottom:440px}
+.footer{margin-top:-440px}
 
 .top-bar .title-area i {color: $main-color2;}
 .top-bar-section { 
@@ -46,6 +47,12 @@ img.full {
   margin-bottom: 1em;
 }
 
+.google-map {width:100%; height:100%;}
+.map-labels {
+     white-space: nowrap;
+}
+#map-canvas { height:30rem; img{max-width: inherit; }}
+
 
 .footer {
   // Height must be 45px (nav.tab-bar, .main-section) higher
@@ -72,11 +79,14 @@ img.full {
   }
 }
 
-.google-map {width:100%; height:100%;}
-.map-labels {
-     white-space: nowrap;
+.footer-logo {
+  .row {
+    background-color: $footer-logo;
+  }
+  padding: 1em 0 1em 0;
+  background-color: $footer-logo;
+  color: #777;
 }
-#map-canvas { height:30rem; img{max-width: inherit; }}
 
 .iGroupware-footer {
   padding: 1em 0 1em 0;
