--- a/src/partials/info.jade
+++ b/src/partials/info.jade
@@ -49,25 +49,16 @@ div.row
 div.row
  div.large-6.columns
   h3(translate) Verzekering
-  p(translate)
-   | Het is belangrijk een goede reisverzekering af te sluiten dat de kite en de kite gerelateerde activiteiten dekt. 
-   | Dan kan bijvoorbeeld bij #[a(href='https://www.allianz-assistance.nl/reisverzekering/adventure-en-survival-verzekering') Allianz Global Assistance] 
-   | of via de #[a(href='http://www.funsportpolis.nl/index.php/faq') Nederlandse kitevereningingn (NKV)]
+  p(translate) Het is belangrijk een goede reisverzekering af te sluiten dat de kite en de kite gerelateerde activiteiten dekt. Dan kan bijvoorbeeld bij #[a(href='https://www.allianz-assistance.nl/reisverzekering/adventure-en-survival-verzekering') Allianz Global Assistance] of via de #[a(href='http://www.funsportpolis.nl/index.php/faq') Nederlandse kitevereningingn (NKV)]
   h3 Kite level
-  p(translate)
-   | Omdat je mee gaat doen met kitevakantie verwachten we dat je genoeg ervaring hebt. 
-   | Daarom vinden we het belangrijk dat je de volgende informatie goed gelezen hebt:
+  p(translate) Omdat je mee gaat doen met kitevakantie verwachten we dat je genoeg ervaring hebt. Daarom vinden we het belangrijk dat je de volgende informatie goed gelezen hebt:
   ul
    li #[a(href='/static/docs/Kite-level-agreement.pdf', target="_blank") Kite-level agreement (pdf)<F2>] 
    li #[a(href='/static/docs/Form-and-participation-agreement.pdf', target="_blank") Participation agreement (pdf)]
   p(translate) Deze formulieren moet je getekend opsturen of meenemen.
  div.large-6.columns
   h3(translate) Annulering
-  p(translate)
-   | In het geval dat de trip geannuleerd wordt door te weinig inschrijvingen word de aanbetaling volledig teruggestort.
-   | Als je de trip wilt annuleren 30 dagen voor vertrek is de aanbetaling niet uitkeerbaar. Wij hanteren 
-   | hiervoor dezelfde regels als in de #[a(href='http://www.anvr.nl/') ANVR]. 
-   | Wat doen wij bij annulering door cyclonen e.d.?
+  p(translate) In het geval dat de trip geannuleerd wordt door te weinig inschrijvingen word de aanbetaling volledig teruggestort. Als je de trip wilt annuleren 30 dagen voor vertrek is de aanbetaling niet uitkeerbaar. Wij hanteren hiervoor dezelfde regels als in de #[a(href='http://www.anvr.nl/') ANVR]. Wat doen wij bij annulering door cyclonen e.d.?
   p(translate)
    | Als zich serieuze weer waarschuwingen voordoen voor de noordelijke kustlijn/Pilbarra zullen wij de
    | route wijzigen om deze te vermijden.
